# hiveplotlib-nn-viz

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  writeup.md
src/nnviz/: __init__.py  animate.py  capture.py  data.py  model.py  order.py  plot_compare.py  plot_dense.py  plot_dense_pcp.py  plot_p2cp.py  plot_pathways.py  tracking.py  train.py
